add ScorerepositoryImpl